--- a/test/quadratic/Test Quadratic 10-10.ipynb
+++ b/test/quadratic/Test Quadratic 10-10.ipynb
@@ -159,6 +159,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a1c9bf5a-439a-408e-97f0-0b07c58bea29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000             100.0    100.000000\n",
+      "mean    -2.778616               0.0      0.199638\n",
+      "std      1.399711               0.0      0.013954\n",
+      "min     -5.245462               0.0      0.167444\n",
+      "25%     -3.973540               0.0      0.198235\n",
+      "50%     -2.990693               0.0      0.200515\n",
+      "75%     -1.839966               0.0      0.202987\n",
+      "max      1.447501               0.0      0.263747\n",
+      "Number of infeasible solution: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/cq_exact_10-10.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cad38e16-1a87-4f11-92b4-b608f7f3ea11",
    "metadata": {},
@@ -232,6 +261,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c956d49c-2d19-4589-b3e4-a45e903a852f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean    -2.857766          0.184249      0.139806\n",
+      "std      1.380641          0.095250      0.015732\n",
+      "min     -5.295697          0.016281      0.118579\n",
+      "25%     -4.053361          0.114362      0.132154\n",
+      "50%     -3.033066          0.162895      0.133319\n",
+      "75%     -1.992545          0.255210      0.143576\n",
+      "max      1.287201          0.403525      0.201784\n",
+      "Number of infeasible solution: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/cq_heur_rnd_10-10.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "96304fbd-08f5-4be7-a81e-83c85332029c",
    "metadata": {},
@@ -299,6 +357,35 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/cq_heur_n1_10-10.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "cee15718-e299-4111-a775-a0ab9b5e3cc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1.000000e+02             100.0    100.000000\n",
+      "mean   1.219108e+15               0.0      0.132198\n",
+      "std    5.757495e+15               0.0      0.009339\n",
+      "min   -4.765557e+00               0.0      0.120835\n",
+      "25%   -3.147985e+00               0.0      0.123503\n",
+      "50%   -1.900374e+00               0.0      0.136191\n",
+      "75%    5.268976e+00               0.0      0.138600\n",
+      "max    3.688209e+16               0.0      0.168422\n",
+      "Number of infeasible solution: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/cq_heur_n1_10-10.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
    ]
   },
   {
@@ -601,6 +688,35 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/cq_lr_10-10.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "924725a5-db7c-4de0-a805-8f5d53e27920",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean    -1.602293          0.000358      0.003604\n",
+      "std      1.672147          0.002678      0.001680\n",
+      "min     -4.187225          0.000000      0.001000\n",
+      "25%     -2.992502          0.000000      0.002491\n",
+      "50%     -1.999704          0.000000      0.003006\n",
+      "75%     -0.622180          0.000000      0.004001\n",
+      "max      3.252418          0.024279      0.009535\n",
+      "Number of infeasible solution: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/cq_lr_10-10.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
    ]
   },
   {
@@ -907,8 +1023,333 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "id": "7a69a8c0-fa45-4ab1-b03e-d1df743e5545",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean    -1.817698          0.001271      0.003535\n",
+      "std      1.652370          0.005377      0.001563\n",
+      "min     -4.591527          0.000000      0.001506\n",
+      "25%     -3.265236          0.000000      0.002512\n",
+      "50%     -2.078343          0.000000      0.003137\n",
+      "75%     -0.703937          0.000000      0.003859\n",
+      "max      3.096604          0.031964      0.009074\n",
+      "Number of infeasible solution: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/cq_lt_10-10.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a941a76c-0ea0-4fb9-a23e-51c85a433463",
+   "metadata": {},
+   "source": [
+    "### Parametric Learning Then Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "382a0a8a-d846-4182-ab69-7d618edea9cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random seed\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "afdf56b3-5d23-4042-b4c8-a4eb3dbb756a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyperparameters\n",
+    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
+    "hsize = 32            # width of hidden layers for solution mapping\n",
+    "lr = 1e-3             # learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c0910211-a95e-4c60-acb5-c764cfffe155",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set problem\n",
+    "import neuromancer as nm\n",
+    "from src.problem import nmQuadratic\n",
+    "from src.func.layer import netFC\n",
+    "# build neural architecture for the solution map\n",
+    "func = nm.modules.blocks.MLP(insize=num_ineq, outsize=num_var, bias=True,\n",
+    "                             linear_map=nm.slim.maps[\"linear\"],\n",
+    "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
+    "smap = nm.system.Node(func, [\"b\"], [\"x\"], name=\"smap\")\n",
+    "# build neuromancer problem for rounding\n",
+    "components = nn.ModuleList([smap]).to(\"cuda\")\n",
+    "loss_fn = nmQuadratic([\"b\", \"x\"], num_var, num_ineq, penalty_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "302fa35d-7b70-4cd8-a56b-5e450223d3ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Validation Loss: 258.35\n",
+      "Epoch 1, Validation Loss: 96.46\n",
+      "Epoch 2, Validation Loss: 6.20\n",
+      "Epoch 3, Validation Loss: 4.04\n",
+      "Epoch 4, Validation Loss: 3.37\n",
+      "Epoch 5, Validation Loss: 2.73\n",
+      "Epoch 6, Validation Loss: 2.24\n",
+      "Epoch 7, Validation Loss: 2.03\n",
+      "Epoch 8, Validation Loss: 2.04\n",
+      "Epoch 9, Validation Loss: 1.84\n",
+      "Epoch 10, Validation Loss: 1.65\n",
+      "Epoch 11, Validation Loss: 1.38\n",
+      "Epoch 12, Validation Loss: 0.74\n",
+      "Epoch 13, Validation Loss: 0.58\n",
+      "Epoch 14, Validation Loss: 0.53\n",
+      "Epoch 15, Validation Loss: 0.13\n",
+      "Epoch 16, Validation Loss: 0.13\n",
+      "Epoch 17, Validation Loss: -0.00\n",
+      "Epoch 18, Validation Loss: -0.03\n",
+      "Epoch 19, Validation Loss: -0.08\n",
+      "Epoch 20, Validation Loss: -0.14\n",
+      "Epoch 21, Validation Loss: 0.40\n",
+      "Epoch 22, Validation Loss: -0.42\n",
+      "Epoch 23, Validation Loss: -0.68\n",
+      "Epoch 24, Validation Loss: -0.52\n",
+      "Epoch 25, Validation Loss: -0.42\n",
+      "Epoch 26, Validation Loss: -0.34\n",
+      "Epoch 27, Validation Loss: -0.88\n",
+      "Epoch 28, Validation Loss: -1.06\n",
+      "Epoch 29, Validation Loss: -1.13\n",
+      "Epoch 30, Validation Loss: -1.14\n",
+      "Epoch 31, Validation Loss: -1.20\n",
+      "Epoch 32, Validation Loss: -1.25\n",
+      "Epoch 33, Validation Loss: -1.44\n",
+      "Epoch 34, Validation Loss: -1.48\n",
+      "Epoch 35, Validation Loss: -1.49\n",
+      "Epoch 36, Validation Loss: -1.60\n",
+      "Epoch 37, Validation Loss: -1.61\n",
+      "Epoch 38, Validation Loss: -1.79\n",
+      "Epoch 39, Validation Loss: -1.76\n",
+      "Epoch 40, Validation Loss: -1.91\n",
+      "Epoch 41, Validation Loss: -1.83\n",
+      "Epoch 42, Validation Loss: -1.92\n",
+      "Epoch 43, Validation Loss: -1.90\n",
+      "Epoch 44, Validation Loss: -1.94\n",
+      "Epoch 45, Validation Loss: -2.01\n",
+      "Epoch 46, Validation Loss: -2.15\n",
+      "Epoch 47, Validation Loss: -2.18\n",
+      "Epoch 48, Validation Loss: -1.76\n",
+      "Epoch 49, Validation Loss: -2.06\n",
+      "Epoch 50, Validation Loss: -2.03\n",
+      "Epoch 51, Validation Loss: -2.06\n",
+      "Epoch 52, Validation Loss: -2.05\n",
+      "Epoch 53, Validation Loss: -2.18\n",
+      "Epoch 54, Validation Loss: -2.20\n",
+      "Epoch 55, Validation Loss: -2.07\n",
+      "Epoch 56, Validation Loss: -2.19\n",
+      "Epoch 57, Validation Loss: -2.16\n",
+      "Epoch 58, Validation Loss: -2.24\n",
+      "Epoch 59, Validation Loss: -2.27\n",
+      "Epoch 60, Validation Loss: -2.07\n",
+      "Epoch 61, Validation Loss: -2.25\n",
+      "Epoch 62, Validation Loss: -0.73\n",
+      "Epoch 63, Validation Loss: -2.20\n",
+      "Epoch 64, Validation Loss: -1.93\n",
+      "Epoch 65, Validation Loss: -2.16\n",
+      "Epoch 66, Validation Loss: -2.31\n",
+      "Epoch 67, Validation Loss: -1.99\n",
+      "Epoch 68, Validation Loss: -2.28\n",
+      "Epoch 69, Validation Loss: -1.80\n",
+      "Epoch 70, Validation Loss: -2.09\n",
+      "Epoch 71, Validation Loss: -1.20\n",
+      "Epoch 72, Validation Loss: -2.12\n",
+      "Epoch 73, Validation Loss: -2.24\n",
+      "Epoch 74, Validation Loss: -2.18\n",
+      "Epoch 75, Validation Loss: -2.17\n",
+      "Epoch 76, Validation Loss: -2.14\n",
+      "Epoch 77, Validation Loss: -2.32\n",
+      "Epoch 78, Validation Loss: -2.15\n",
+      "Epoch 79, Validation Loss: -2.32\n",
+      "Epoch 80, Validation Loss: -2.29\n",
+      "Epoch 81, Validation Loss: -1.74\n",
+      "Epoch 82, Validation Loss: -2.04\n",
+      "Epoch 83, Validation Loss: -2.33\n",
+      "Epoch 84, Validation Loss: -2.28\n",
+      "Epoch 85, Validation Loss: -2.11\n",
+      "Epoch 86, Validation Loss: -2.28\n",
+      "Epoch 87, Validation Loss: -1.94\n",
+      "Epoch 88, Validation Loss: -1.96\n",
+      "Epoch 89, Validation Loss: -2.07\n",
+      "Epoch 90, Validation Loss: -2.30\n",
+      "Epoch 91, Validation Loss: -2.21\n",
+      "Epoch 92, Validation Loss: -1.89\n",
+      "Epoch 93, Validation Loss: -2.36\n",
+      "Epoch 94, Validation Loss: -2.28\n",
+      "Epoch 95, Validation Loss: -2.37\n",
+      "Epoch 96, Validation Loss: -2.26\n",
+      "Epoch 97, Validation Loss: -2.42\n",
+      "Epoch 98, Validation Loss: -2.34\n",
+      "Epoch 99, Validation Loss: -1.58\n",
+      "Epoch 100, Validation Loss: -1.13\n",
+      "Epoch 101, Validation Loss: -2.38\n",
+      "Epoch 102, Validation Loss: -2.38\n",
+      "Epoch 103, Validation Loss: -2.33\n",
+      "Epoch 104, Validation Loss: -2.18\n",
+      "Epoch 105, Validation Loss: -2.21\n",
+      "Epoch 106, Validation Loss: -2.32\n",
+      "Epoch 107, Validation Loss: -2.31\n",
+      "Epoch 108, Validation Loss: -2.06\n",
+      "Epoch 109, Validation Loss: -2.24\n",
+      "Epoch 110, Validation Loss: -2.23\n",
+      "Epoch 111, Validation Loss: -2.25\n",
+      "Epoch 112, Validation Loss: -2.18\n",
+      "Epoch 113, Validation Loss: -2.24\n",
+      "Epoch 114, Validation Loss: -2.16\n",
+      "Epoch 115, Validation Loss: -2.30\n",
+      "Epoch 116, Validation Loss: -2.07\n",
+      "Early stopping at epoch 116\n",
+      "Best model loaded.\n",
+      "Training complete.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.problem.neuromancer.trainer import trainer\n",
+    "# training\n",
+    "epochs = 200                    # number of training epochs\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
+    "# create a trainer for the problem\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "# training for the rounding problem\n",
+    "my_trainer.train(loader_train, loader_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c75f4de2-7ebf-43b8-ac0b-d1a82a300eb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:02<00:00, 419.36it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1000.000000       1000.000000   1000.000000\n",
+      "mean     -2.463731          0.079601      0.000526\n",
+      "std       1.345521          0.057805      0.000522\n",
+      "min      -4.873255          0.000000      0.000000\n",
+      "25%      -3.505334          0.037228      0.000000\n",
+      "50%      -2.573169          0.070248      0.000507\n",
+      "75%      -1.588484          0.109723      0.001000\n",
+      "max       2.281136          0.335568      0.001995\n",
+      "Number of infeasible solution: 938\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.heuristic import naive_round\n",
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "    # data point as tensor\n",
+    "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
+    "                  \"name\": \"test\"}\n",
+    "    # infer\n",
+    "    components.eval()\n",
+    "    tick = time.time()\n",
+    "    with torch.no_grad():\n",
+    "        for comp in components:\n",
+    "            datapoints.update(comp(datapoints))\n",
+    "    tock = time.time()\n",
+    "    # assign params\n",
+    "    model.set_param_val({\"b\":b.cpu().numpy()})\n",
+    "    # assign vars\n",
+    "    x = datapoints[\"x\"]\n",
+    "    for i in range(num_var):\n",
+    "        model.vars[\"x\"][i].value = x[0,i].item()\n",
+    "    # get solutions\n",
+    "    xval_rel, _ = model.get_val()\n",
+    "    xval, objval = naive_round(xval_rel, model)\n",
+    "    params.append(list(b.cpu().numpy()))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/cq_pr_10-10.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e8d074c1-2847-4202-8a38-c0bb5d3c0ecb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean    -2.481321          0.078485      0.000724\n",
+      "std      1.548409          0.057827      0.000484\n",
+      "min     -4.868193          0.000000      0.000000\n",
+      "25%     -3.808517          0.032311      0.000000\n",
+      "50%     -2.755608          0.069870      0.000999\n",
+      "75%     -1.583942          0.111662      0.001002\n",
+      "max      2.281136          0.262004      0.001507\n",
+      "Number of infeasible solution: 93\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/cq_pr_10-10.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70cdb429-d08f-4b28-bcac-e6a5cf53f109",
    "metadata": {},
    "outputs": [],
    "source": []
