--- a/test/quadratic/Test Quadratic 20-20.ipynb
+++ b/test/quadratic/Test Quadratic 20-20.ipynb
@@ -159,6 +159,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "09db1599-741b-48c6-bc9a-2ba902321fdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000             100.0    100.000000\n",
+      "mean    -5.120363               0.0      5.415370\n",
+      "std      0.343169               0.0      2.522497\n",
+      "min     -5.935736               0.0      1.261963\n",
+      "25%     -5.368253               0.0      3.348413\n",
+      "50%     -5.130437               0.0      5.240330\n",
+      "75%     -4.863931               0.0      6.869727\n",
+      "max     -4.282859               0.0     12.718379\n",
+      "Number of infeasible solution: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/cq_exact_20-20.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cad38e16-1a87-4f11-92b4-b608f7f3ea11",
    "metadata": {},
@@ -229,6 +258,35 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/cq_heur_rnd_20-20.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "849c3778-ee8f-478d-9e47-52828fbad90b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean    -5.179348          0.437249      0.130713\n",
+      "std      0.351804          0.205353      0.010380\n",
+      "min     -5.960970          0.031061      0.123118\n",
+      "25%     -5.419368          0.304010      0.126733\n",
+      "50%     -5.216537          0.419553      0.127920\n",
+      "75%     -4.909583          0.607390      0.129207\n",
+      "max     -4.300917          1.030549      0.197645\n",
+      "Number of infeasible solution: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/cq_heur_rnd_20-20.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
    ]
   },
   {
@@ -562,6 +620,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "23a523e7-c787-43c9-a5fa-bb3d3e77cb6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean    -4.147645          0.002640      0.003365\n",
+      "std      0.402367          0.014346      0.001367\n",
+      "min     -4.905395          0.000000      0.001000\n",
+      "25%     -4.421822          0.000000      0.002410\n",
+      "50%     -4.193520          0.000000      0.003006\n",
+      "75%     -3.849404          0.000000      0.004000\n",
+      "max     -3.103360          0.106557      0.007754\n",
+      "Number of infeasible solution: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/cq_lr_20-20.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2dbf8a72-29b9-49c4-b3c1-0d68895c1c1f",
    "metadata": {},
@@ -820,8 +907,339 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "50b795b6-60ef-4eb4-a19a-ce66f653e650",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean    -4.328512          0.001035      0.003325\n",
+      "std      0.319526          0.010352      0.001493\n",
+      "min     -5.053879          0.000000      0.002000\n",
+      "25%     -4.550607          0.000000      0.002171\n",
+      "50%     -4.341492          0.000000      0.003000\n",
+      "75%     -4.121362          0.000000      0.003524\n",
+      "max     -3.587453          0.103516      0.008253\n",
+      "Number of infeasible solution: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/cq_lt_20-20.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "784bfabe-04f9-43c4-bb5e-0891788121c3",
+   "metadata": {},
+   "source": [
+    "### Parametric Learning Then Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "48e570a2-9d1d-4d27-9158-8fb3fc7c96ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random seed\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "bb3b944a-92bf-489c-b9f9-ea32374b1fc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyperparameters\n",
+    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
+    "hsize = 64            # width of hidden layers for solution mapping\n",
+    "lr = 1e-3             # learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9a97d7ba-006b-4281-b9fe-fd82cf9d7121",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set problem\n",
+    "import neuromancer as nm\n",
+    "from src.problem import nmQuadratic\n",
+    "from src.func.layer import netFC\n",
+    "# build neural architecture for the solution map\n",
+    "func = nm.modules.blocks.MLP(insize=num_ineq, outsize=num_var, bias=True,\n",
+    "                             linear_map=nm.slim.maps[\"linear\"],\n",
+    "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
+    "smap = nm.system.Node(func, [\"b\"], [\"x\"], name=\"smap\")\n",
+    "# build neuromancer problem for rounding\n",
+    "components = nn.ModuleList([smap]).to(\"cuda\")\n",
+    "loss_fn = nmQuadratic([\"b\", \"x\"], num_var, num_ineq, penalty_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9c2b6120-84fc-43a4-b53c-f2029a42cbb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Validation Loss: 494.47\n",
+      "Epoch 1, Validation Loss: -0.44\n",
+      "Epoch 2, Validation Loss: -2.54\n",
+      "Epoch 3, Validation Loss: -3.12\n",
+      "Epoch 4, Validation Loss: -3.20\n",
+      "Epoch 5, Validation Loss: -3.43\n",
+      "Epoch 6, Validation Loss: -3.32\n",
+      "Epoch 7, Validation Loss: -3.43\n",
+      "Epoch 8, Validation Loss: -3.32\n",
+      "Epoch 9, Validation Loss: -3.40\n",
+      "Epoch 10, Validation Loss: -3.40\n",
+      "Epoch 11, Validation Loss: -3.24\n",
+      "Epoch 12, Validation Loss: -3.42\n",
+      "Epoch 13, Validation Loss: -3.15\n",
+      "Epoch 14, Validation Loss: -3.46\n",
+      "Epoch 15, Validation Loss: -3.65\n",
+      "Epoch 16, Validation Loss: -3.73\n",
+      "Epoch 17, Validation Loss: -3.67\n",
+      "Epoch 18, Validation Loss: -3.70\n",
+      "Epoch 19, Validation Loss: -3.74\n",
+      "Epoch 20, Validation Loss: -3.68\n",
+      "Epoch 21, Validation Loss: -3.82\n",
+      "Epoch 22, Validation Loss: -3.91\n",
+      "Epoch 23, Validation Loss: -3.85\n",
+      "Epoch 24, Validation Loss: -3.94\n",
+      "Epoch 25, Validation Loss: -3.72\n",
+      "Epoch 26, Validation Loss: -3.94\n",
+      "Epoch 27, Validation Loss: -3.87\n",
+      "Epoch 28, Validation Loss: -3.92\n",
+      "Epoch 29, Validation Loss: -3.96\n",
+      "Epoch 30, Validation Loss: -3.72\n",
+      "Epoch 31, Validation Loss: -3.85\n",
+      "Epoch 32, Validation Loss: -3.88\n",
+      "Epoch 33, Validation Loss: -3.88\n",
+      "Epoch 34, Validation Loss: -3.84\n",
+      "Epoch 35, Validation Loss: -3.87\n",
+      "Epoch 36, Validation Loss: -3.83\n",
+      "Epoch 37, Validation Loss: -3.90\n",
+      "Epoch 38, Validation Loss: -3.94\n",
+      "Epoch 39, Validation Loss: -4.04\n",
+      "Epoch 40, Validation Loss: -3.93\n",
+      "Epoch 41, Validation Loss: -3.99\n",
+      "Epoch 42, Validation Loss: -4.12\n",
+      "Epoch 43, Validation Loss: -4.02\n",
+      "Epoch 44, Validation Loss: -4.09\n",
+      "Epoch 45, Validation Loss: -4.23\n",
+      "Epoch 46, Validation Loss: -4.17\n",
+      "Epoch 47, Validation Loss: -4.15\n",
+      "Epoch 48, Validation Loss: -4.10\n",
+      "Epoch 49, Validation Loss: -4.30\n",
+      "Epoch 50, Validation Loss: -4.28\n",
+      "Epoch 51, Validation Loss: -4.17\n",
+      "Epoch 52, Validation Loss: -4.25\n",
+      "Epoch 53, Validation Loss: -4.28\n",
+      "Epoch 54, Validation Loss: -4.15\n",
+      "Epoch 55, Validation Loss: -4.37\n",
+      "Epoch 56, Validation Loss: -4.19\n",
+      "Epoch 57, Validation Loss: -4.15\n",
+      "Epoch 58, Validation Loss: -4.21\n",
+      "Epoch 59, Validation Loss: -4.25\n",
+      "Epoch 60, Validation Loss: -4.29\n",
+      "Epoch 61, Validation Loss: -4.22\n",
+      "Epoch 62, Validation Loss: -4.34\n",
+      "Epoch 63, Validation Loss: -4.28\n",
+      "Epoch 64, Validation Loss: -4.26\n",
+      "Epoch 65, Validation Loss: -4.27\n",
+      "Epoch 66, Validation Loss: -4.32\n",
+      "Epoch 67, Validation Loss: -4.30\n",
+      "Epoch 68, Validation Loss: -4.27\n",
+      "Epoch 69, Validation Loss: -4.21\n",
+      "Epoch 70, Validation Loss: -4.38\n",
+      "Epoch 71, Validation Loss: -4.33\n",
+      "Epoch 72, Validation Loss: -4.54\n",
+      "Epoch 73, Validation Loss: -4.53\n",
+      "Epoch 74, Validation Loss: -4.59\n",
+      "Epoch 75, Validation Loss: -4.35\n",
+      "Epoch 76, Validation Loss: -4.36\n",
+      "Epoch 77, Validation Loss: -4.46\n",
+      "Epoch 78, Validation Loss: -4.46\n",
+      "Epoch 79, Validation Loss: -4.57\n",
+      "Epoch 80, Validation Loss: -4.51\n",
+      "Epoch 81, Validation Loss: -4.56\n",
+      "Epoch 82, Validation Loss: -4.49\n",
+      "Epoch 83, Validation Loss: -4.59\n",
+      "Epoch 84, Validation Loss: -4.51\n",
+      "Epoch 85, Validation Loss: -4.45\n",
+      "Epoch 86, Validation Loss: -4.48\n",
+      "Epoch 87, Validation Loss: -4.38\n",
+      "Epoch 88, Validation Loss: -4.54\n",
+      "Epoch 89, Validation Loss: -4.61\n",
+      "Epoch 90, Validation Loss: -4.49\n",
+      "Epoch 91, Validation Loss: -4.58\n",
+      "Epoch 92, Validation Loss: -4.42\n",
+      "Epoch 93, Validation Loss: -4.41\n",
+      "Epoch 94, Validation Loss: -4.38\n",
+      "Epoch 95, Validation Loss: -4.62\n",
+      "Epoch 96, Validation Loss: -4.55\n",
+      "Epoch 97, Validation Loss: -4.51\n",
+      "Epoch 98, Validation Loss: -4.56\n",
+      "Epoch 99, Validation Loss: -4.46\n",
+      "Epoch 100, Validation Loss: -4.36\n",
+      "Epoch 101, Validation Loss: -4.63\n",
+      "Epoch 102, Validation Loss: -4.37\n",
+      "Epoch 103, Validation Loss: -4.64\n",
+      "Epoch 104, Validation Loss: -4.51\n",
+      "Epoch 105, Validation Loss: -4.50\n",
+      "Epoch 106, Validation Loss: -4.58\n",
+      "Epoch 107, Validation Loss: -4.57\n",
+      "Epoch 108, Validation Loss: -4.57\n",
+      "Epoch 109, Validation Loss: -4.59\n",
+      "Epoch 110, Validation Loss: -4.45\n",
+      "Epoch 111, Validation Loss: -4.39\n",
+      "Epoch 112, Validation Loss: -4.57\n",
+      "Epoch 113, Validation Loss: -4.57\n",
+      "Epoch 114, Validation Loss: -4.49\n",
+      "Epoch 115, Validation Loss: -4.49\n",
+      "Epoch 116, Validation Loss: -4.55\n",
+      "Epoch 117, Validation Loss: -4.52\n",
+      "Epoch 118, Validation Loss: -4.60\n",
+      "Epoch 119, Validation Loss: -4.61\n",
+      "Epoch 120, Validation Loss: -4.55\n",
+      "Epoch 121, Validation Loss: -4.62\n",
+      "Epoch 122, Validation Loss: -4.54\n",
+      "Early stopping at epoch 122\n",
+      "Best model loaded.\n",
+      "Training complete.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.problem.neuromancer.trainer import trainer\n",
+    "# training\n",
+    "epochs = 200                    # number of training epochs\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
+    "# create a trainer for the problem\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "# training for the rounding problem\n",
+    "my_trainer.train(loader_train, loader_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "311c7950-72ed-4c3d-8d14-e0a0ffcb3870",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 221.05it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1000.000000       1000.000000   1000.000000\n",
+      "mean     -4.645524          0.038998      0.000583\n",
+      "std       0.331071          0.063282      0.000533\n",
+      "min      -5.477475          0.000000      0.000000\n",
+      "25%      -4.890799          0.000000      0.000000\n",
+      "50%      -4.645010          0.000000      0.000998\n",
+      "75%      -4.414861          0.061435      0.001001\n",
+      "max      -3.588798          0.380077      0.002000\n",
+      "Number of infeasible solution: 465\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.heuristic import naive_round\n",
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "    # data point as tensor\n",
+    "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
+    "                  \"name\": \"test\"}\n",
+    "    # infer\n",
+    "    components.eval()\n",
+    "    tick = time.time()\n",
+    "    with torch.no_grad():\n",
+    "        for comp in components:\n",
+    "            datapoints.update(comp(datapoints))\n",
+    "    tock = time.time()\n",
+    "    # assign params\n",
+    "    model.set_param_val({\"b\":b.cpu().numpy()})\n",
+    "    # assign vars\n",
+    "    x = datapoints[\"x\"]\n",
+    "    for i in range(num_var):\n",
+    "        model.vars[\"x\"][i].value = x[0,i].item()\n",
+    "    # get solutions\n",
+    "    xval_rel, _ = model.get_val()\n",
+    "    xval, objval = naive_round(xval_rel, model)\n",
+    "    params.append(list(b.cpu().numpy()))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/cq_pr_20-20.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1825c3a0-5e27-462c-89f8-c8665f397bb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean     0.492967          0.022866      0.000819\n",
+      "std      0.725327          0.032927      0.000452\n",
+      "min     -0.568628          0.000000      0.000000\n",
+      "25%     -0.055222          0.000000      0.000511\n",
+      "50%      0.300910          0.006795      0.001000\n",
+      "75%      0.880189          0.035026      0.001008\n",
+      "max      2.924858          0.190021      0.001521\n",
+      "Number of infeasible solution: 58\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/cq_pr_5-5.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "382a0a8a-d846-4182-ab69-7d618edea9cf",
+   "id": "bea83707-4bb4-40bf-a728-ff0244cee6ab",
    "metadata": {},
    "outputs": [],
    "source": []
