--- a/test/quadratic/Test Quadratic 50-50.ipynb
+++ b/test/quadratic/Test Quadratic 50-50.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "67327e9b-3513-4c29-b121-0ce7dfdf10eb",
    "metadata": {},
    "outputs": [
@@ -116,13 +116,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|▏                                                                             | 3/1000 [03:03<16:57:23, 61.23s/it]"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 100/100 [1:42:09<00:00, 61.30s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000             100.0    100.000000\n",
+      "mean   -15.884677               0.0     61.288965\n",
+      "std      0.339345               0.0      0.237985\n",
+      "min    -16.569278               0.0     61.031847\n",
+      "25%    -16.096610               0.0     61.167366\n",
+      "50%    -15.940147               0.0     61.273876\n",
+      "75%    -15.647801               0.0     61.351765\n",
+      "max    -15.008218               0.0     63.309573\n",
+      "Number of infeasible solution: 0\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # set params\n",
     "    model.set_param_val({\"b\":b.cpu().numpy()})\n",
     "    # solve\n",
@@ -152,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "03328361-3f39-461d-ac81-40c8c14717bb",
    "metadata": {},
    "outputs": [],
@@ -213,6 +229,35 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/cq_heur_rnd_50-50.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bd334578-9a31-4fef-ad80-dfbbb37653ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean   -16.172588          1.936195      0.332018\n",
+      "std      0.353489          0.453747      0.135587\n",
+      "min    -16.903971          0.896528      0.177150\n",
+      "25%    -16.391646          1.604608      0.230620\n",
+      "50%    -16.204917          1.904917      0.310094\n",
+      "75%    -15.898180          2.211433      0.404741\n",
+      "max    -15.383844          2.932958      0.848458\n",
+      "Number of infeasible solution: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/cq_heur_rnd_50-50.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
    ]
   },
   {
@@ -286,73 +331,32 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "316273d7-690a-424a-bab4-6a7638457d87",
-   "metadata": {},
-   "source": [
-    "### Heuristic - N3"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "52ce4b8c-8469-4aaa-9346-e650c2e19b81",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_heur = model.first_solution_heuristic(nodes_limit=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "c06bcc68-76fc-42af-89fc-dff179a85999",
+   "execution_count": 17,
+   "id": "0b0bb359-9156-47f2-8343-fcc54ae79321",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [06:40<00:00,  2.50it/s]\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "            Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1.000000e+03            1000.0   1000.000000\n",
-      "mean   1.467174e+16               0.0      0.390463\n",
-      "std    5.131523e+16               0.0      1.107813\n",
-      "min   -1.657508e+01               0.0      0.163690\n",
-      "25%   -1.536716e+01               0.0      0.223936\n",
-      "50%   -1.346294e+01               0.0      0.276416\n",
-      "75%    2.006904e+12               0.0      0.375336\n",
-      "max    2.797341e+17               0.0     30.982206\n",
+      "count  1.000000e+02             100.0    100.000000\n",
+      "mean   1.675118e+17               0.0      0.280995\n",
+      "std    1.459043e+17               0.0      0.275393\n",
+      "min   -1.596815e+01               0.0      0.174124\n",
+      "25%   -1.028291e+01               0.0      0.210024\n",
+      "50%    2.448033e+17               0.0      0.239730\n",
+      "75%    2.971595e+17               0.0      0.270106\n",
+      "max    3.743183e+17               0.0      2.894798\n",
       "Number of infeasible solution: 0\n"
      ]
     }
    ],
    "source": [
-    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
-    "    # set params\n",
-    "    model_heur.set_param_val({\"b\":b.cpu().numpy()})\n",
-    "    # solve\n",
-    "    tick = time.time()\n",
-    "    xval, objval = model_heur.solve(\"gurobi\")\n",
-    "    tock = time.time()\n",
-    "    # eval\n",
-    "    params.append(list(b))\n",
-    "    sols.append(list(list(xval.values())[0].values()))\n",
-    "    objvals.append(objval)\n",
-    "    conviols.append(sum(model_heur.cal_violation()))\n",
-    "    elapseds.append(tock - tick)\n",
-    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
-    "time.sleep(1)\n",
+    "df = pd.read_csv(\"result/cq_heur_n1_50-50.csv\", index_col=0).iloc[:100]\n",
     "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
-    "df.to_csv(\"result/cq_heur_n3_50-50.csv\")"
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
    ]
   },
   {
@@ -671,6 +675,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a4d2ea5c-adc6-48ac-a3c8-23f53d8893bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean   -13.108997          0.000265      0.003396\n",
+      "std      0.249736          0.002647      0.001504\n",
+      "min    -13.655529          0.000000      0.001000\n",
+      "25%    -13.310327          0.000000      0.002519\n",
+      "50%    -13.130720          0.000000      0.003009\n",
+      "75%    -12.955102          0.000000      0.003675\n",
+      "max    -12.364275          0.026468      0.009829\n",
+      "Number of infeasible solution: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/cq_lr_50-50.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2dbf8a72-29b9-49c4-b3c1-0d68895c1c1f",
    "metadata": {},
@@ -929,8 +962,309 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "id": "27ff9b08-b85f-428b-8a93-36ededbaa43c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean   -12.905063          0.000497      0.003349\n",
+      "std      0.268591          0.004790      0.001224\n",
+      "min    -13.445088          0.000000      0.001347\n",
+      "25%    -13.093108          0.000000      0.002510\n",
+      "50%    -12.945923          0.000000      0.003083\n",
+      "75%    -12.749801          0.000000      0.003999\n",
+      "max    -12.279643          0.047884      0.007667\n",
+      "Number of infeasible solution: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/cq_lt_50-50.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c160fe4-8abb-42b3-9bb6-63c483d40972",
+   "metadata": {},
+   "source": [
+    "### Parametric Learning Then Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "382a0a8a-d846-4182-ab69-7d618edea9cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random seed\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b250f89f-9c2e-4dd1-9591-73c3bd2078d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyperparameters\n",
+    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
+    "hsize = 128           # width of hidden layers for solution mapping\n",
+    "lr = 1e-3             # learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "153d0575-6d9e-42ba-be4c-3d97f8940550",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set problem\n",
+    "import neuromancer as nm\n",
+    "from src.problem import nmQuadratic\n",
+    "from src.func.layer import netFC\n",
+    "# build neural architecture for the solution map\n",
+    "func = nm.modules.blocks.MLP(insize=num_ineq, outsize=num_var, bias=True,\n",
+    "                             linear_map=nm.slim.maps[\"linear\"],\n",
+    "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
+    "smap = nm.system.Node(func, [\"b\"], [\"x\"], name=\"smap\")\n",
+    "# build neuromancer problem for rounding\n",
+    "components = nn.ModuleList([smap]).to(\"cuda\")\n",
+    "loss_fn = nmQuadratic([\"b\", \"x\"], num_var, num_ineq, penalty_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "16471b1e-b12d-470e-94ea-d0da98b0963c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Validation Loss: 1248.58\n",
+      "Epoch 1, Validation Loss: -7.98\n",
+      "Epoch 2, Validation Loss: -11.57\n",
+      "Epoch 3, Validation Loss: -12.33\n",
+      "Epoch 4, Validation Loss: -12.14\n",
+      "Epoch 5, Validation Loss: -12.47\n",
+      "Epoch 6, Validation Loss: -12.71\n",
+      "Epoch 7, Validation Loss: -12.66\n",
+      "Epoch 8, Validation Loss: -12.58\n",
+      "Epoch 9, Validation Loss: -12.68\n",
+      "Epoch 10, Validation Loss: -12.67\n",
+      "Epoch 11, Validation Loss: -12.74\n",
+      "Epoch 12, Validation Loss: -12.57\n",
+      "Epoch 13, Validation Loss: -12.90\n",
+      "Epoch 14, Validation Loss: -12.74\n",
+      "Epoch 15, Validation Loss: -12.56\n",
+      "Epoch 16, Validation Loss: -12.80\n",
+      "Epoch 17, Validation Loss: -12.96\n",
+      "Epoch 18, Validation Loss: -12.35\n",
+      "Epoch 19, Validation Loss: -12.84\n",
+      "Epoch 20, Validation Loss: -12.71\n",
+      "Epoch 21, Validation Loss: -12.95\n",
+      "Epoch 22, Validation Loss: -12.91\n",
+      "Epoch 23, Validation Loss: -12.94\n",
+      "Epoch 24, Validation Loss: -13.25\n",
+      "Epoch 25, Validation Loss: -13.28\n",
+      "Epoch 26, Validation Loss: -13.11\n",
+      "Epoch 27, Validation Loss: -13.28\n",
+      "Epoch 28, Validation Loss: -13.32\n",
+      "Epoch 29, Validation Loss: -13.21\n",
+      "Epoch 30, Validation Loss: -13.28\n",
+      "Epoch 31, Validation Loss: -13.24\n",
+      "Epoch 32, Validation Loss: -13.37\n",
+      "Epoch 33, Validation Loss: -13.43\n",
+      "Epoch 34, Validation Loss: -13.44\n",
+      "Epoch 35, Validation Loss: -13.77\n",
+      "Epoch 36, Validation Loss: -13.74\n",
+      "Epoch 37, Validation Loss: -13.41\n",
+      "Epoch 38, Validation Loss: -13.61\n",
+      "Epoch 39, Validation Loss: -13.57\n",
+      "Epoch 40, Validation Loss: -13.75\n",
+      "Epoch 41, Validation Loss: -13.72\n",
+      "Epoch 42, Validation Loss: -13.48\n",
+      "Epoch 43, Validation Loss: -13.70\n",
+      "Epoch 44, Validation Loss: -13.79\n",
+      "Epoch 45, Validation Loss: -13.64\n",
+      "Epoch 46, Validation Loss: -13.85\n",
+      "Epoch 47, Validation Loss: -13.74\n",
+      "Epoch 48, Validation Loss: -13.70\n",
+      "Epoch 49, Validation Loss: -13.40\n",
+      "Epoch 50, Validation Loss: -13.57\n",
+      "Epoch 51, Validation Loss: -13.73\n",
+      "Epoch 52, Validation Loss: -13.71\n",
+      "Epoch 53, Validation Loss: -13.82\n",
+      "Epoch 54, Validation Loss: -13.73\n",
+      "Epoch 55, Validation Loss: -13.81\n",
+      "Epoch 56, Validation Loss: -13.82\n",
+      "Epoch 57, Validation Loss: -13.76\n",
+      "Epoch 58, Validation Loss: -13.77\n",
+      "Epoch 59, Validation Loss: -13.87\n",
+      "Epoch 60, Validation Loss: -13.74\n",
+      "Epoch 61, Validation Loss: -13.98\n",
+      "Epoch 62, Validation Loss: -13.79\n",
+      "Epoch 63, Validation Loss: -13.96\n",
+      "Epoch 64, Validation Loss: -13.68\n",
+      "Epoch 65, Validation Loss: -13.86\n",
+      "Epoch 66, Validation Loss: -13.71\n",
+      "Epoch 67, Validation Loss: -13.95\n",
+      "Epoch 68, Validation Loss: -13.79\n",
+      "Epoch 69, Validation Loss: -13.61\n",
+      "Epoch 70, Validation Loss: -13.86\n",
+      "Epoch 71, Validation Loss: -13.96\n",
+      "Epoch 72, Validation Loss: -13.62\n",
+      "Epoch 73, Validation Loss: -14.04\n",
+      "Epoch 74, Validation Loss: -13.74\n",
+      "Epoch 75, Validation Loss: -13.64\n",
+      "Epoch 76, Validation Loss: -13.78\n",
+      "Epoch 77, Validation Loss: -13.89\n",
+      "Epoch 78, Validation Loss: -13.93\n",
+      "Epoch 79, Validation Loss: -13.91\n",
+      "Epoch 80, Validation Loss: -13.71\n",
+      "Epoch 81, Validation Loss: -13.74\n",
+      "Epoch 82, Validation Loss: -13.89\n",
+      "Epoch 83, Validation Loss: -13.66\n",
+      "Epoch 84, Validation Loss: -13.97\n",
+      "Epoch 85, Validation Loss: -13.94\n",
+      "Epoch 86, Validation Loss: -14.01\n",
+      "Epoch 87, Validation Loss: -13.87\n",
+      "Epoch 88, Validation Loss: -13.95\n",
+      "Epoch 89, Validation Loss: -13.84\n",
+      "Epoch 90, Validation Loss: -13.85\n",
+      "Epoch 91, Validation Loss: -13.95\n",
+      "Epoch 92, Validation Loss: -14.00\n",
+      "Early stopping at epoch 92\n",
+      "Best model loaded.\n",
+      "Training complete.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.problem.neuromancer.trainer import trainer\n",
+    "# training\n",
+    "epochs = 200                    # number of training epochs\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
+    "# create a trainer for the problem\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "# training for the rounding problem\n",
+    "my_trainer.train(loader_train, loader_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "645d2f69-3621-4ccc-8fab-ab3742c439c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:14<00:00, 67.55it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1000.000000       1000.000000   1000.000000\n",
+      "mean    -14.160757          0.066880      0.000734\n",
+      "std       0.234957          0.106689      0.000542\n",
+      "min     -14.814219          0.000000      0.000000\n",
+      "25%     -14.316845          0.000000      0.000000\n",
+      "50%     -14.178223          0.000000      0.001000\n",
+      "75%     -14.002037          0.105844      0.001003\n",
+      "max     -13.433465          0.628216      0.002513\n",
+      "Number of infeasible solution: 476\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.heuristic import naive_round\n",
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "    # data point as tensor\n",
+    "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
+    "                  \"name\": \"test\"}\n",
+    "    # infer\n",
+    "    components.eval()\n",
+    "    tick = time.time()\n",
+    "    with torch.no_grad():\n",
+    "        for comp in components:\n",
+    "            datapoints.update(comp(datapoints))\n",
+    "    tock = time.time()\n",
+    "    # assign params\n",
+    "    model.set_param_val({\"b\":b.cpu().numpy()})\n",
+    "    # assign vars\n",
+    "    x = datapoints[\"x\"]\n",
+    "    for i in range(num_var):\n",
+    "        model.vars[\"x\"][i].value = x[0,i].item()\n",
+    "    # get solutions\n",
+    "    xval_rel, _ = model.get_val()\n",
+    "    xval, objval = naive_round(xval_rel, model)\n",
+    "    params.append(list(b.cpu().numpy()))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/cq_pr_50-50.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "277b370a-dda3-43cd-980f-948aeec1207c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean   -14.155025          0.061082      0.000664\n",
+      "std      0.258000          0.104191      0.000517\n",
+      "min    -14.745079          0.000000      0.000000\n",
+      "25%    -14.324969          0.000000      0.000000\n",
+      "50%    -14.162546          0.000000      0.001000\n",
+      "75%    -14.008844          0.082220      0.001001\n",
+      "max    -13.439211          0.498455      0.001692\n",
+      "Number of infeasible solution: 44\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/cq_pr_50-50.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe6aecbf-3af1-48bb-8086-abfc3b14e04e",
    "metadata": {},
    "outputs": [],
    "source": []
